# obsnote

./: .gitignore  README.md  pyproject.toml
noteshell/: cli.py
obsnote/: __init__.py  cli.py
tests/: test_cli.py
