[project]
name = "obsnote"
version = "0.1.0"
description = "Capture shell commands, command output, notes, and local LLM summaries into an Obsidian vault."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
obsnote = "obsnote.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
